<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clear_black_48dp"
        android:background="#00000000"
        android:layout_gravity="right"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">
            <ImageView
                android:id="@+id/detail_thumbnail"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_large_material" />

                <TextView
                    android:id="@+id/detail_teaser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teaser"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/detail_payout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Payout"
                    android:paddingTop="10dp"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>