<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/offer_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image_black_48dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/offer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/offer_teaser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teaser"/>
        <TextView
            android:id="@+id/offer_payout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Payout"/>

    </LinearLayout>


</LinearLayout>