<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/offer_response_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_response_code_txt"
                />
            <TextView
                android:id="@+id/offer_response_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_response_message_txt"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/offer_before_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_before_black_24dp"/>
            <ImageButton
                android:id="@+id/offer_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next_black_24dp"/>

        </LinearLayout>

    </LinearLayout>
    <ListView
        android:id="@+id/offer_result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>