<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.OfferAPIFormActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/request_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!--<ScrollView
        android:id="@+id/request_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->

        <LinearLayout
            android:id="@+id/request_offer_api_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_api_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_api_uid"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_api_apikey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_api_apikey"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_api_appid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_api_appid"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_api_pup0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_api_pub0"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/offer_api_request_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/offer_api_request"
                android:textStyle="bold" />

        </LinearLayout>

        <fragment
            android:id="@+id/offer_api_result_fragment"
            android:name="com.fyber.offerapisample.ui.fragment.OfferAPIResultFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         />

</LinearLayout>
